--- a/Clash.ini
+++ b/Clash.ini
@@ -20,7 +20,7 @@ custom_proxy_group=Proxies`select`.*
 # custom_proxy_group=Netflix`select`[]SG`[]TW`[]US`[]Proxies
 # custom_proxy_group=Spotify`select`[]DIRECT`[]HK`[]TW`[]SG`[]JP`[]US`[]Proxies
 custom_proxy_group=YouTube`select`[]HK`[]TW`[]SG`[]JP`[]US`[]Proxies
-custom_proxy_group=OpenAI`select`[]US`[]Proxies
+custom_proxy_group=OpenAI`select`[]US``[]HK`[]TW`[]SG`[]JP`[]Proxies
 # custom_proxy_group=Claude`select`[]US`[]Proxies
 custom_proxy_group=Final`select`[]Proxies`[]DIRECT
 custom_proxy_group=HK`select`(港|HK|Hong Kong)
