--- a/Clash.ini
+++ b/Clash.ini
@@ -14,7 +14,7 @@ ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/ma
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=Final,[]FINAL
 
-custom_proxy_group=Proxies`select`[]HK`[]TW`[]SG`[]JP`[]US`[]`.*
+custom_proxy_group=Proxies`select`[]HK`[]TW`[]SG`[]JP`[]US`[]DIRECT`.*
 custom_proxy_group=Emby`select`[]DIRECT`.*
 # custom_proxy_group=Bilibili`select`[]DIRECT`[]TW`[]HK`[]Proxies
 # custom_proxy_group=Netflix`select`[]SG`[]TW`[]US`[]Proxies
