--- a/Clash.ini
+++ b/Clash.ini
@@ -11,6 +11,7 @@ ruleset=Proxies,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/T
 ruleset=Proxies,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=Proxies,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
+ruleset=DIRECT,https://raw.githubusercontent.com/haoch1/subscribe/refs/heads/main/Work.list
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=Final,[]FINAL
 
