--- a/Clash.ini
+++ b/Clash.ini
@@ -6,7 +6,7 @@ ruleset=Emby,https://raw.githubusercontent.com/haoch1/subscribe/main/Emby.list
 # ruleset=Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 ruleset=OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-# ruleset=Claude,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
+ruleset=Claude,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
 ruleset=Proxies,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=Proxies,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=Proxies,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
@@ -21,8 +21,8 @@ custom_proxy_group=Emby`select`[]DIRECT`.*
 # custom_proxy_group=Netflix`select`[]SG`[]TW`[]US`[]Proxies
 # custom_proxy_group=Spotify`select`[]DIRECT`[]HK`[]TW`[]SG`[]JP`[]US`[]Proxies
 custom_proxy_group=YouTube`select`[]HK`[]TW`[]SG`[]JP`[]US`[]Proxies
-custom_proxy_group=OpenAI`select`[]US``[]HK`[]TW`[]SG`[]JP`[]Proxies
-# custom_proxy_group=Claude`select`[]US`[]Proxies
+custom_proxy_group=OpenAI`select`[]US
+custom_proxy_group=Claude`select`[]US
 custom_proxy_group=Final`select`[]Proxies`[]DIRECT
 custom_proxy_group=HK`select`(港|HK|Hong Kong)
 custom_proxy_group=TW`select`(台|新北|彰化|TW|Taiwan)
