--- a/MihomoParty.yml
+++ b/MihomoParty.yml
@@ -1,16 +1,16 @@
 proxy-groups:
 #分组
-  - {name: Proxies, type: select, proxies: [HK, TW, SG, JP, US], icon: https://ghp.ci/https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png }
-  - {name: Emby, type: select, proxies: [DIRECT, HK, TW, SG, JP, US], icon: https://ghp.ci/https://raw.githubusercontent.com/Orz-3/mini/master/Color/Emby.png }
-  - {name: YouTube, type: select, proxies: [HK, TW, SG, JP, US], icon: https://ghfast.top/https://raw.githubusercontent.com/Orz-3/mini/master/Color/YouTube.png }
-  - {name: HK, type: select, include-all: true, filter: "港|HK|(?i)Hong", icon: https://ghp.ci/https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png }
-  - {name: TW, type: select, include-all: true, filter: "台|湾|TW|(?i)Taiwan", icon: https://ghp.ci/https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png }
-  - {name: SG, type: select, include-all: true, filter: "新|坡|SG|(?i)Singapore", icon: https://ghp.ci/https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png }
-  - {name: JP, type: select, include-all: true, filter: "日|东京|JP|(?i)Japan", icon: https://ghp.ci/https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png }
-  - {name: US, type: select, include-all: true, filter: "美|US|(?i)States|American", icon: https://ghp.ci/https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png }
-  - {name: AdBlock,  type: select, proxies: [REJECT, DIRECT], icon: https://ghp.ci/https://raw.githubusercontent.com/Orz-3/mini/master/Color/Adblock.png }
-  - {name: Final, type: select, proxies: [Proxies, DIRECT], icon: https://ghp.ci/https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png }
-  - {name: GLOBAL, type: select, include-all: true, icon: https://ghp.ci/https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png }
+  - {name: Proxies, type: select, proxies: [HK, TW, SG, JP, US], icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Proxy.png }
+  - {name: Emby, type: select, proxies: [DIRECT, HK, TW, SG, JP, US], icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Emby.png }
+  - {name: YouTube, type: select, proxies: [HK, TW, SG, JP, US], icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/YouTube.png }
+  - {name: HK, type: select, include-all: true, filter: "港|HK|(?i)Hong", icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Hong_Kong.png }
+  - {name: TW, type: select, include-all: true, filter: "台|湾|TW|(?i)Taiwan", icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Taiwan.png }
+  - {name: SG, type: select, include-all: true, filter: "新|坡|SG|(?i)Singapore", icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Singapore.png }
+  - {name: JP, type: select, include-all: true, filter: "日|东京|JP|(?i)Japan", icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Japan.png }
+  - {name: US, type: select, include-all: true, filter: "美|US|(?i)States|American", icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/United_States.png }
+  - {name: AdBlock,  type: select, proxies: [REJECT, DIRECT], icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Advertising.png }
+  - {name: Final, type: select, proxies: [Proxies, DIRECT], icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Final.png }
+  - {name: GLOBAL, type: select, include-all: true, icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Global.png }
   
 
 # 分流规则 
