--- a/MihomoParty.yml
+++ b/MihomoParty.yml
@@ -8,7 +8,6 @@ proxy-groups:
   - {name: SG, type: select, include-all: true, filter: "新|坡|SG|(?i)Singapore", icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Singapore.png }
   - {name: JP, type: select, include-all: true, filter: "日|东京|JP|(?i)Japan", icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Japan.png }
   - {name: US, type: select, include-all: true, filter: "美|US|(?i)States|American", icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/United_States.png }
-  - {name: AdBlock,  type: select, proxies: [REJECT, DIRECT], icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Advertising.png }
   - {name: Final, type: select, proxies: [Proxies, DIRECT], icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Final.png }
   - {name: GLOBAL, type: select, include-all: true, icon: https://ghp.ci/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Global.png }
   
@@ -34,7 +33,7 @@ rule-providers:
 
 # 分流Policy 
 rules:
-  - RULE-SET,AdBlock,AdBlock
+  - RULE-SET,AdBlock,REJECT
   - RULE-SET,OpenAi,US
   - RULE-SET,Emby,Emby
   - RULE-SET,GlobalMedia,Proxies
