--- a/MihomoParty.yml
+++ b/MihomoParty.yml
@@ -16,6 +16,8 @@ proxy-groups:
 rule-providers:
   AdBlock:     {behavior: domain,    interval: 86400, format: text, type: http, url: https://raw.githubusercontent.com/Cats-Team/AdRules/main/adrules_domainset.txt ,                                           path: ./ruleset/anti-ad-clash.txt }
   OpenAi:      {behavior: classical, interval: 86400, format: yaml, type: http, url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.yaml ,                      path: ./ruleset/OpenAi.yaml       }
+  Claude:      {behavior: classical, interval: 86400, format: yaml, type: http, url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Claude/Claude.yaml ,           path: ./ruleset/Claude.yaml       }
+  Gemini:      {behavior: classical, interval: 86400, format: yaml, type: http, url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Gemini/Gemini.yaml ,           path: ./ruleset/Gemini.yaml       }  
   Emby:        {behavior: classical, interval: 86400, format: yaml, type: http, url: https://raw.githubusercontent.com/haoch1/subscribe/refs/heads/main/Emby.yaml ,                                             path: ./ruleset/Emby.yaml         }
   GlobalMedia: {behavior: classical, interval: 86400, format: yaml, type: http, url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia_Classical.yaml ,  path: ./ruleset/GlobalMedia.yaml  }
   Apple:       {behavior: classical, interval: 86400, format: yaml, type: http, url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple_Classical.yaml ,              path: ./ruleset/Apple.yaml        }
@@ -36,6 +38,8 @@ rule-providers:
 rules:
   - RULE-SET,AdBlock,REJECT
   - RULE-SET,OpenAi,US
+  - RULE-SET,Claude,US
+  - RULE-SET,Gemini,US
   - RULE-SET,Emby,Emby
   - RULE-SET,GlobalMedia,Proxies
   - RULE-SET,Apple,Proxies
