--- a/Clash.ini
+++ b/Clash.ini
@@ -2,6 +2,7 @@
 
 # ruleset=Bilibili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
 ruleset=Emby,https://raw.githubusercontent.com/haoch1/subscribe/main/Emby.list
+ruleset=DIRECT,https://raw.githubusercontent.com/haoch1/subscribe/main/Emby_direct.list
 # ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 # ruleset=Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
