--- a/Clash.ini
+++ b/Clash.ini
@@ -6,8 +6,7 @@ ruleset=DIRECT,https://raw.githubusercontent.com/haoch1/subscribe/main/Emby_dire
 # ruleset=Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 # ruleset=Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
-ruleset=OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-# ruleset=Claude,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
+ruleset=AI,https://gist.githubusercontent.com/ddgksf2013/cb4121e8b5c5d865cc949cb8120320c4/raw/Ai.yaml
 ruleset=Proxies,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=Proxies,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=Proxies,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
@@ -22,8 +21,7 @@ custom_proxy_group=Emby`select`[]DIRECT`.*
 # custom_proxy_group=Netflix`select`[]SG`[]TW`[]US`[]Proxies
 # custom_proxy_group=Spotify`select`[]DIRECT`[]HK`[]TW`[]SG`[]JP`[]US`[]Proxies
 custom_proxy_group=YouTube`select`[]HK`[]TW`[]SG`[]JP`[]US`[]Proxies
-custom_proxy_group=OpenAI`select`[]US
-# custom_proxy_group=Claude`select`[]US
+custom_proxy_group=AI`select`[]US`[]HK`[]TW`[]SG`[]JP`[]Proxies
 custom_proxy_group=Final`select`[]Proxies`[]DIRECT
 custom_proxy_group=HK`select`(港|HK|Hong Kong)
 custom_proxy_group=TW`select`(台|新北|彰化|TW|Taiwan)
