--- a/Emby.yaml
+++ b/Emby.yaml
@@ -1,5 +1,5 @@
 payload:
-  - DOMAIN-SUFFIX,as174.com
+  - DOMAIN-SUFFIX,as174.de
   - DOMAIN-SUFFIX,xmsl.org
   - DOMAIN-SUFFIX,imetyou.top
   - DOMAIN-SUFFIX,micu.hk
