--- a/Emby.yaml
+++ b/Emby.yaml
@@ -8,3 +8,5 @@ payload:
   - DOMAIN-SUFFIX,uhdnow.com
   - DOMAIN-SUFFIX,okemby.org
   - DOMAIN-SUFFIX,emby.moe
+  - DOMAIN-SUFFIX,83787.de
+  - DOMAIN-SUFFIX,entertang.work
