--- a/Emby.yaml
+++ b/Emby.yaml
@@ -11,3 +11,5 @@ payload:
   - DOMAIN-SUFFIX,83787.de
   - DOMAIN-SUFFIX,entertang.work
   - DOMAIN-SUFFIX,etflix.lol
+  - DOMAIN-SUFFIX,xxlb.net
+  - DOMAIN-SUFFIX,luyuyun.com
